--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,19 @@
 server:
   port: 8080
 
+
 spring:
   datasource:
 #    name: test
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
     username: root
     password: root
+  application:
+    name: demo-spring-boot
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 #    type: com.alibaba.druid.pool.DruidDataSource
 #    driver-class-name: com.mysql.jdbc.Driver
 #    filters: stat
@@ -32,3 +39,14 @@ spring:
 #    reasonable: true
 #    supportMethodsArguments: true
 #    params: count=countSql
+
+#eureka:
+#  client:
+#    serviceUrl:
+#      #注册中心的地址
+#      defaultZone: http://localhost:8761/eureka/
+#
+#spring:
+#  application:
+#    #当前应用名称
+#    name: service-user
